--- a/public/css/app.css
+++ b/public/css/app.css
@@ -674,11 +674,17 @@ select {
 .top-full {
   top: 100%;
 }
-.top-\[15\%\] {
-  top: 15%;
+.top-2 {
+  top: 0.5rem;
+}
+.-top-\[2px\] {
+  top: -2px;
 }
 .left-1 {
   left: 0.25rem;
+}
+.top-\[5\%\] {
+  top: 5%;
 }
 .top-3 {
   top: 0.75rem;
@@ -686,32 +692,23 @@ select {
 .right-\[90\%\] {
   right: 90%;
 }
-.top-2 {
-  top: 0.5rem;
-}
-.-top-\[2px\] {
-  top: -2px;
-}
-.top-\[5\%\] {
-  top: 5%;
-}
 .z-0 {
   z-index: 0;
 }
 .z-\[99\] {
   z-index: 99;
 }
-.z-50 {
-  z-index: 50;
-}
-.z-\[100\] {
-  z-index: 100;
+.z-10 {
+  z-index: 10;
 }
 .z-\[2\] {
   z-index: 2;
 }
-.z-\[\] {
-  z-index: ;
+.z-\[100\] {
+  z-index: 100;
+}
+.z-50 {
+  z-index: 50;
 }
 .m-1 {
   margin: 0.25rem;
@@ -723,6 +720,10 @@ select {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 .my-4 {
   margin-top: 1rem;
@@ -780,17 +781,23 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.mt-7 {
-  margin-top: 1.75rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
+}
+.mt-7 {
+  margin-top: 1.75rem;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.mt-20 {
+  margin-top: 5rem;
 }
 .-mt-10 {
   margin-top: -2.5rem;
@@ -804,11 +811,17 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
 }
 .inline-flex {
   display: inline-flex;
+}
+.table {
+  display: table;
 }
 .grid {
   display: grid;
@@ -885,11 +898,8 @@ select {
 .w-20 {
   width: 5rem;
 }
-.w-5\/12 {
-  width: 41.666667%;
-}
-.w-7\/12 {
-  width: 58.333333%;
+.w-24 {
+  width: 6rem;
 }
 .w-3\/12 {
   width: 25%;
@@ -900,8 +910,23 @@ select {
 .w-48 {
   width: 12rem;
 }
+.w-4\/12 {
+  width: 33.333333%;
+}
+.w-8\/12 {
+  width: 66.666667%;
+}
+.w-28 {
+  width: 7rem;
+}
+.\!w-8 {
+  width: 2rem !important;
+}
 .w-11\/12 {
   width: 91.666667%;
+}
+.w-\[45rem\] {
+  width: 45rem;
 }
 .w-80 {
   width: 20rem;
@@ -921,23 +946,23 @@ select {
 .w-36 {
   width: 9rem;
 }
-.w-28 {
-  width: 7rem;
-}
-.\!w-8 {
-  width: 2rem !important;
-}
 .w-4 {
   width: 1rem;
 }
 .w-6 {
   width: 1.5rem;
 }
+.min-w-\[30rem\] {
+  min-width: 30rem;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
 .max-w-xl {
   max-width: 36rem;
+}
+.max-w-\[22rem\] {
+  max-width: 22rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1021,14 +1046,23 @@ select {
 .gap-9 {
   gap: 2.25rem;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .gap-3 {
   gap: 0.75rem;
 }
-.gap-2 {
-  gap: 0.5rem;
+.gap-6 {
+  gap: 1.5rem;
 }
 .gap-16 {
   gap: 4rem;
@@ -1059,6 +1093,12 @@ select {
 .overflow-x-auto {
   overflow-x: auto;
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1067,6 +1107,9 @@ select {
 }
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1078,6 +1121,9 @@ select {
 }
 .border {
   border-width: 1px;
+}
+.border-2 {
+  border-width: 2px;
 }
 .border-y {
   border-top-width: 1px;
@@ -1122,6 +1168,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
 .border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
@@ -1153,13 +1203,29 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.bg-yellow-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
+}
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
-.bg-red-600 {
+.bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-orange-700 {
   --tw-bg-opacity: 1;
@@ -1192,11 +1258,8 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-.bg-opacity-20 {
-  --tw-bg-opacity: 0.2;
+.bg-opacity-40 {
+  --tw-bg-opacity: 0.4;
 }
 .fill-current {
   fill: currentColor;
@@ -1206,6 +1269,9 @@ select {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .p-5 {
   padding: 1.25rem;
@@ -1243,21 +1309,21 @@ select {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 .py-12 {
   padding-top: 3rem;
@@ -1313,6 +1379,9 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.text-left {
+  text-align: left;
+}
 .text-center {
   text-align: center;
 }
@@ -1334,13 +1403,13 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -1417,13 +1486,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
-.text-green-600 {
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
-}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 .text-indigo-700 {
   --tw-text-opacity: 1;
@@ -1524,6 +1593,13 @@ select {
 }
 .first\:border-t-0:first-child {
   border-top-width: 0px;
+}
+.last\:border-b-0:last-child {
+  border-bottom-width: 0px;
+}
+.odd\:bg-gray-100:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
@@ -1698,6 +1774,10 @@ select {
     margin-left: 0px;
   }
 
+  .sm\:mr-20 {
+    margin-right: 5rem;
+  }
+
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -1730,6 +1810,10 @@ select {
     height: 2rem;
   }
 
+  .sm\:w-6\/12 {
+    width: 50%;
+  }
+
   .sm\:w-72 {
     width: 18rem;
   }
@@ -1758,6 +1842,10 @@ select {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:flex-nowrap {
     flex-wrap: nowrap;
   }
@@ -1780,6 +1868,18 @@ select {
 
   .sm\:rounded-lg {
     border-radius: 0.5rem;
+  }
+
+  .sm\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
+  .sm\:p-1 {
+    padding: 0.25rem;
+  }
+
+  .sm\:p-2 {
+    padding: 0.5rem;
   }
 
   .sm\:px-6 {
@@ -1806,6 +1906,10 @@ select {
 }
 @media (min-width: 768px) {
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:mt-3 {
     margin-top: 0.75rem;
   }
@@ -1818,8 +1922,16 @@ select {
     display: flex;
   }
 
-  .md\:w-96 {
-    width: 24rem;
+  .md\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .md\:w-7\/12 {
+    width: 58.333333%;
+  }
+
+  .md\:w-4\/12 {
+    width: 33.333333%;
   }
 
   .md\:w-10\/12 {
@@ -1830,12 +1942,8 @@ select {
     width: 50%;
   }
 
-  .md\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .md\:w-7\/12 {
-    width: 58.333333%;
+  .md\:w-96 {
+    width: 24rem;
   }
 
   .md\:grid-cols-2 {
@@ -1844,6 +1952,10 @@ select {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:justify-start {
@@ -1864,6 +1976,11 @@ select {
 
   .md\:p-3 {
     padding: 0.75rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 @media (min-width: 1024px) {
@@ -1907,20 +2024,24 @@ select {
     }
   }
 
-  .lg\:flex {
-    display: flex;
+  .lg\:w-3\/12 {
+    width: 25%;
   }
 
   .lg\:w-\[39rem\] {
     width: 39rem;
   }
 
-  .lg\:w-5\/12 {
-    width: 41.666667%;
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
-  .lg\:w-7\/12 {
-    width: 58.333333%;
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:gap-3 {
+    gap: 0.75rem;
   }
 
   .lg\:p-3 {
@@ -1954,6 +2075,10 @@ select {
 
   .xl\:w-5\/12 {
     width: 41.666667%;
+  }
+
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
 
