--- a/public/css/app.css
+++ b/public/css/app.css
@@ -808,11 +808,29 @@ select {
 .-mr-2 {
   margin-right: -0.5rem;
 }
+.mr-3 {
+  margin-right: 0.75rem;
+}
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.mr-0 {
+  margin-right: 0px;
+}
+.mt-10 {
+  margin-top: 2.5rem;
+}
 .block {
   display: block;
 }
 .inline-block {
   display: inline-block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -952,11 +970,17 @@ select {
 .w-6 {
   width: 1.5rem;
 }
-.w-3 {
-  width: 0.75rem;
+.w-5\/12 {
+  width: 41.666667%;
 }
-.w-32 {
-  width: 8rem;
+.w-2\/12 {
+  width: 16.666667%;
+}
+.w-1\/12 {
+  width: 8.333333%;
+}
+.w-12 {
+  width: 3rem;
 }
 .min-w-\[30rem\] {
   min-width: 30rem;
@@ -1025,12 +1049,6 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
-.place-content-center {
-  place-content: center;
-}
-.place-items-center {
-  place-items: center;
-}
 .items-center {
   align-items: center;
 }
@@ -1089,6 +1107,13 @@ select {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
 }
+.gap-y-4 {
+  row-gap: 1rem;
+}
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1125,6 +1150,12 @@ select {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-none {
+  border-radius: 0px;
+}
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1273,10 +1304,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -1397,6 +1424,15 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pb-0 {
+  padding-bottom: 0px;
+}
+.pt-3 {
+  padding-top: 0.75rem;
+}
+.pr-3 {
+  padding-right: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1841,6 +1877,14 @@ select {
     width: 18rem;
   }
 
+  .sm\:w-48 {
+    width: 12rem;
+  }
+
+  .sm\:w-auto {
+    width: auto;
+  }
+
   .sm\:max-w-md {
     max-width: 28rem;
   }
@@ -1863,10 +1907,6 @@ select {
 
   .sm\:flex-nowrap {
     flex-wrap: nowrap;
-  }
-
-  .sm\:place-content-center {
-    place-content: center;
   }
 
   .sm\:items-center {
@@ -1967,6 +2007,10 @@ select {
 
   .md\:w-9\/12 {
     width: 75%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:grid-cols-2 {
