completed rest of code

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,10 @@
 }
 
 @layer base {
+    .prose {
+        max-width: 100% !important;
+    }
+
     * {
         text-align: right;
         direction: rtl;
